@@ -1,3 +1,12 @@
+2012-03-02  Han Hojong  <hojong.han@samsung.com>
+
+        Expected results updated for checking type conversion
+        https://bugs.webkit.org/show_bug.cgi?id=80138
+
+        Reviewed by Gavin Barraclough.
+
+        * tests/mozilla/ecma/TypeConversion/9.3.1-3.js:
+
 2012-03-02  Kenichi Ishibashi  <bashi@chromium.org>
 
         Adding WebSocket per-frame DEFLATE extension
